--- a/svg-builder/src/scss/left-sidebar.scss
+++ b/svg-builder/src/scss/left-sidebar.scss
@@ -5,6 +5,7 @@
     gap: 12px;
     margin: 0 4px 4px;
     overflow-y: auto;
+    overscroll-behavior: contain;
 }
 
 #layer-management {
