--- a/svg-builder/src/scss/variables.scss
+++ b/svg-builder/src/scss/variables.scss
@@ -14,4 +14,6 @@
     --tab-links-total-height: 36px;
     --tab-border: 1px solid rgb(35, 35, 35);
     --center-top-height: 64px;
+    --sidebar-width: 260px;
+    --control-min-height: 32px;
 }
